packages/@aws-cdk/aws-eks/test/fargate-cluster.integ.snapshot/aws-cdk-eks-fargate-cluster-test.template.json
{
 "Resources": {
  "FargateClusterDefaultVpcE69D3A13": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet1"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet1"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPublicSubnet1RouteTableAssociation43821F5B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434"
    },
    "SubnetId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC"
    }
   }
  },
  "FargateClusterDefaultVpcPublicSubnet1DefaultRouteA0A93C70": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FargateClusterDefaultVpcIGWFD9278DA"
    }
   },
   "DependsOn": [
    "FargateClusterDefaultVpcVPCGWA7F012E1"
   ]
  },
  "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet1"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet1"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet2"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet2"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPublicSubnet2RouteTableAssociationCF18C87A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9"
    },
    "SubnetId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93"
    }
   }
  },
  "FargateClusterDefaultVpcPublicSubnet2DefaultRouteABE51CF2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FargateClusterDefaultVpcIGWFD9278DA"
    }
   },
   "DependsOn": [
    "FargateClusterDefaultVpcVPCGWA7F012E1"
   ]
  },
  "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet2"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet2"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet1"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet1"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPrivateSubnet1RouteTableAssociationDC34627F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB"
    },
    "SubnetId": {
     "Ref": "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA"
    }
   }
  },
  "FargateClusterDefaultVpcPrivateSubnet1DefaultRouteE93D7B93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51"
    }
   }
  },
  "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet2"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet2"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcPrivateSubnet2RouteTableAssociation6C0234FE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C"
    },
    "SubnetId": {
     "Ref": "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154"
    }
   }
  },
  "FargateClusterDefaultVpcPrivateSubnet2DefaultRouteABCE20FF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579"
    }
   }
  },
  "FargateClusterDefaultVpcIGWFD9278DA": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc"
     }
    ]
   }
  },
  "FargateClusterDefaultVpcVPCGWA7F012E1": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    },
    "InternetGatewayId": {
     "Ref": "FargateClusterDefaultVpcIGWFD9278DA"
    }
   }
  },
  "FargateClusterRole8E36B33A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSClusterPolicy"
       ]
      ]
     }
    ]
   }
  },
  "FargateClusterControlPlaneSecurityGroup1021A150": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "EKS Control Plane Security Group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "FargateClusterDefaultVpcE69D3A13"
    }
   }
  },
  "FargateClusterCreationRole8C524AD8": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::",
           {
            "Ref": "AWS::AccountId"
           },
           ":root"
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "FargateClusterDefaultVpcIGWFD9278DA",
    "FargateClusterDefaultVpcPrivateSubnet1DefaultRouteE93D7B93",
    "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB",
    "FargateClusterDefaultVpcPrivateSubnet1RouteTableAssociationDC34627F",
    "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA",
    "FargateClusterDefaultVpcPrivateSubnet2DefaultRouteABCE20FF",
    "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C",
    "FargateClusterDefaultVpcPrivateSubnet2RouteTableAssociation6C0234FE",
    "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154",
    "FargateClusterDefaultVpcPublicSubnet1DefaultRouteA0A93C70",
    "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0",
    "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51",
    "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434",
    "FargateClusterDefaultVpcPublicSubnet1RouteTableAssociation43821F5B",
    "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC",
    "FargateClusterDefaultVpcPublicSubnet2DefaultRouteABE51CF2",
    "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68",
    "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579",
    "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9",
    "FargateClusterDefaultVpcPublicSubnet2RouteTableAssociationCF18C87A",
    "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93",
    "FargateClusterDefaultVpcE69D3A13",
    "FargateClusterDefaultVpcVPCGWA7F012E1"
   ]
  },
  "FargateClusterCreationRoleDefaultPolicy629049D0": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FargateClusterRole8E36B33A",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "eks:CreateCluster",
        "eks:DescribeCluster",
        "eks:DescribeUpdate",
        "eks:DeleteCluster",
        "eks:UpdateClusterVersion",
        "eks:UpdateClusterConfig",
        "eks:CreateFargateProfile",
        "eks:TagResource",
        "eks:UntagResource"
       ],
       "Effect": "Allow",
       "Resource": [
        "*"
       ]
      },
      {
       "Action": [
        "eks:DescribeFargateProfile",
        "eks:DeleteFargateProfile"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "iam:GetRole",
        "iam:listAttachedRolePolicies"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": "iam:CreateServiceLinkedRole",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "ec2:DescribeInstances",
        "ec2:DescribeNetworkInterfaces",
        "ec2:DescribeSecurityGroups",
        "ec2:DescribeSubnets",
        "ec2:DescribeRouteTables",
        "ec2:DescribeDhcpOptions",
        "ec2:DescribeVpcs"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FargateClusterCreationRoleDefaultPolicy629049D0",
    "Roles": [
     {
      "Ref": "FargateClusterCreationRole8C524AD8"
     }
    ]
   },
   "DependsOn": [
    "FargateClusterDefaultVpcIGWFD9278DA",
    "FargateClusterDefaultVpcPrivateSubnet1DefaultRouteE93D7B93",
    "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB",
    "FargateClusterDefaultVpcPrivateSubnet1RouteTableAssociationDC34627F",
    "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA",
    "FargateClusterDefaultVpcPrivateSubnet2DefaultRouteABCE20FF",
    "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C",
    "FargateClusterDefaultVpcPrivateSubnet2RouteTableAssociation6C0234FE",
    "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154",
    "FargateClusterDefaultVpcPublicSubnet1DefaultRouteA0A93C70",
    "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0",
    "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51",
    "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434",
    "FargateClusterDefaultVpcPublicSubnet1RouteTableAssociation43821F5B",
    "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC",
    "FargateClusterDefaultVpcPublicSubnet2DefaultRouteABE51CF2",
    "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68",
    "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579",
    "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9",
    "FargateClusterDefaultVpcPublicSubnet2RouteTableAssociationCF18C87A",
    "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93",
    "FargateClusterDefaultVpcE69D3A13",
    "FargateClusterDefaultVpcVPCGWA7F012E1"
   ]
  },
  "FargateCluster019F03E8": {
   "Type": "Custom::AWSCDK-EKS-Cluster",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.awscdkeksfargateclustertestawscdkawseksClusterResourceProviderframeworkonEventC85EBDF3Arn"
     ]
    },
    "Config": {
     "version": "1.21",
     "roleArn": {
      "Fn::GetAtt": [
       "FargateClusterRole8E36B33A",
       "Arn"
      ]
     },
     "resourcesVpcConfig": {
      "subnetIds": [
       {
        "Ref": "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC"
       },
       {
        "Ref": "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93"
       },
       {
        "Ref": "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA"
       },
       {
        "Ref": "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154"
       }
      ],
      "securityGroupIds": [
       {
        "Fn::GetAtt": [
         "FargateClusterControlPlaneSecurityGroup1021A150",
         "GroupId"
        ]
       }
      ],
      "endpointPublicAccess": true,
      "endpointPrivateAccess": true
     }
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "AttributesRevision": 2
   },
   "DependsOn": [
    "FargateClusterDefaultVpcIGWFD9278DA",
    "FargateClusterDefaultVpcPrivateSubnet1DefaultRouteE93D7B93",
    "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB",
    "FargateClusterDefaultVpcPrivateSubnet1RouteTableAssociationDC34627F",
    "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA",
    "FargateClusterDefaultVpcPrivateSubnet2DefaultRouteABCE20FF",
    "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C",
    "FargateClusterDefaultVpcPrivateSubnet2RouteTableAssociation6C0234FE",
    "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154",
    "FargateClusterDefaultVpcPublicSubnet1DefaultRouteA0A93C70",
    "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0",
    "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51",
    "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434",
    "FargateClusterDefaultVpcPublicSubnet1RouteTableAssociation43821F5B",
    "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC",
    "FargateClusterDefaultVpcPublicSubnet2DefaultRouteABE51CF2",
    "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68",
    "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579",
    "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9",
    "FargateClusterDefaultVpcPublicSubnet2RouteTableAssociationCF18C87A",
    "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93",
    "FargateClusterDefaultVpcE69D3A13",
    "FargateClusterDefaultVpcVPCGWA7F012E1",
    "FargateClusterCreationRoleDefaultPolicy629049D0",
    "FargateClusterCreationRole8C524AD8"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "FargateClusterKubectlReadyBarrier93746934": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Type": "String",
    "Value": "aws:cdk:eks:kubectl-ready"
   },
   "DependsOn": [
    "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
    "FargateClusterfargateprofiledefault10E54561",
    "FargateClusterCreationRoleDefaultPolicy629049D0",
    "FargateClusterCreationRole8C524AD8",
    "FargateCluster019F03E8"
   ]
  },
  "FargateClusterMastersRole50BAF9FD": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::",
           {
            "Ref": "AWS::AccountId"
           },
           ":root"
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "FargateClusterAwsAuthmanifest1F7A5553": {
   "Type": "Custom::AWSCDK-EKS-KubernetesResource",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.awscdkeksfargateclustertestawscdkawseksKubectlProviderframeworkonEvent33B2ACA4Arn"
     ]
    },
    "Manifest": {
     "Fn::Join": [
      "",
      [
       "[{\"apiVersion\":\"v1\",\"kind\":\"ConfigMap\",\"metadata\":{\"name\":\"aws-auth\",\"namespace\":\"kube-system\"},\"data\":{\"mapRoles\":\"[{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "FargateClusterMastersRole50BAF9FD",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"",
       {
        "Fn::GetAtt": [
         "FargateClusterMastersRole50BAF9FD",
         "Arn"
        ]
       },
       "\\\",\\\"groups\\\":[\\\"system:masters\\\"]},{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"system:node:{{SessionName}}\\\",\\\"groups\\\":[\\\"system:bootstrappers\\\",\\\"system:nodes\\\",\\\"system:node-proxier\\\"]}]\",\"mapUsers\":\"[]\",\"mapAccounts\":\"[]\"}}]"
      ]
     ]
    },
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "Overwrite": true
   },
   "DependsOn": [
    "FargateClusterKubectlReadyBarrier93746934"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "FargateClusterCoreDnsComputeTypePatch711BF1B2": {
   "Type": "Custom::AWSCDK-EKS-KubernetesPatch",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.awscdkeksfargateclustertestawscdkawseksKubectlProviderframeworkonEvent33B2ACA4Arn"
     ]
    },
    "ResourceName": "deployment/coredns",
    "ResourceNamespace": "kube-system",
    "ApplyPatchJson": "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"eks.amazonaws.com/compute-type\":\"fargate\"}}}}}",
    "RestorePatchJson": "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"eks.amazonaws.com/compute-type\":\"ec2\"}}}}}",
    "ClusterName": {
     "Ref": "FargateCluster019F03E8"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "PatchType": "strategic"
   },
   "DependsOn": [
    "FargateClusterKubectlReadyBarrier93746934"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks-fargate-pods.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSFargatePodExecutionRolePolicy"
       ]
      ]
     }
    ]
   }
  },
  "FargateClusterfargateprofiledefault10E54561": {
   "Type": "Custom::AWSCDK-EKS-FargateProfile",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.awscdkeksfargateclustertestawscdkawseksClusterResourceProviderframeworkonEventC85EBDF3Arn"
     ]
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "FargateClusterCreationRole8C524AD8",
      "Arn"
     ]
    },
    "Config": {
     "clusterName": {
      "Ref": "FargateCluster019F03E8"
     },
     "podExecutionRoleArn": {
      "Fn::GetAtt": [
       "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
       "Arn"
      ]
     },
     "selectors": [
      {
       "namespace": "default"
      },
      {
       "namespace": "kube-system"
      }
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.",
       {
        "Ref": "AWS::Region"
       },
       ".",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/",
       {
        "Ref": "AssetParameters9ec5e5302ec9024de736d48514d1938b3044a263556b2786f8ebd3cd7d536362S3Bucket3DF2386F"
       },
       "/",
       {
        "Fn::Select": [
         0,
         {
          "Fn::Split": [
           "||",
           {
            "Ref": "AssetParameters9ec5e5302ec9024de736d48514d1938b3044a263556b2786f8ebd3cd7d536362S3VersionKey22CEE8A9"
           }
          ]
         }
        ]
       },
       {
        "Fn::Select": [
         1,
         {
          "Fn::Split": [
           "||",
           {
            "Ref": "AssetParameters9ec5e5302ec9024de736d48514d1938b3044a263556b2786f8ebd3cd7d536362S3VersionKey22CEE8A9"
           }
          ]
         }
        ]
       }
      ]
     ]
    },
    "Parameters": {
     "referencetoawscdkeksfargateclustertestAssetParameters4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06eeS3BucketDC76B2E5Ref": {
      "Ref": "AssetParameters4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06eeS3Bucket4E7CD097"
     },
     "referencetoawscdkeksfargateclustertestAssetParameters4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06eeS3VersionKeyA7127FF2Ref": {
      "Ref": "AssetParameters4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06eeS3VersionKey93D16224"
     },
     "referencetoawscdkeksfargateclustertestFargateClusterCreationRoleFB2229CFArn": {
      "Fn::GetAtt": [
       "FargateClusterCreationRole8C524AD8",
       "Arn"
      ]
     },
     "referencetoawscdkeksfargateclustertestAssetParameters4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6S3Bucket299AF51BRef": {
      "Ref": "AssetParameters4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6S3Bucket5017D348"
     },
     "referencetoawscdkeksfargateclustertestAssetParameters4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6S3VersionKey44C0D711Ref": {
      "Ref": "AssetParameters4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6S3VersionKeyAC941219"
     },
     "referencetoawscdkeksfargateclustertestAssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3BucketA8B33C0FRef": {
      "Ref": "AssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3Bucket40DFAF90"
     },
     "referencetoawscdkeksfargateclustertestAssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3VersionKey10EBAC4DRef": {
      "Ref": "AssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3VersionKey36104212"
     }
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.",
       {
        "Ref": "AWS::Region"
       },
       ".",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/",
       {
        "Ref": "AssetParameters6815ae11ecc2fb2a22ab107f2c127fb4e1f774f854ada7eca8a6c65832947730S3Bucket08E394C2"
       },
       "/",
       {
        "Fn::Select": [
         0,
         {
          "Fn::Split": [
           "||",
           {
            "Ref": "AssetParameters6815ae11ecc2fb2a22ab107f2c127fb4e1f774f854ada7eca8a6c65832947730S3VersionKey3DE806EA"
           }
          ]
         }
        ]
       },
       {
        "Fn::Select": [
         1,
         {
          "Fn::Split": [
           "||",
           {
            "Ref": "AssetParameters6815ae11ecc2fb2a22ab107f2c127fb4e1f774f854ada7eca8a6c65832947730S3VersionKey3DE806EA"
           }
          ]
         }
        ]
       }
      ]
     ]
    },
    "Parameters": {
     "referencetoawscdkeksfargateclustertestFargateCluster8588769EArn": {
      "Fn::GetAtt": [
       "FargateCluster019F03E8",
       "Arn"
      ]
     },
     "referencetoawscdkeksfargateclustertestFargateClusterCreationRoleFB2229CFArn": {
      "Fn::GetAtt": [
       "FargateClusterCreationRole8C524AD8",
       "Arn"
      ]
     },
     "referencetoawscdkeksfargateclustertestAssetParametersa70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8S3BucketC8170E38Ref": {
      "Ref": "AssetParametersa70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8S3Bucket4CD5FFC3"
     },
     "referencetoawscdkeksfargateclustertestAssetParametersa70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8S3VersionKeyFC5034F5Ref": {
      "Ref": "AssetParametersa70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8S3VersionKeyE06BA291"
     },
     "referencetoawscdkeksfargateclustertestFargateClusterDefaultVpcPrivateSubnet1Subnet0278E6BCRef": {
      "Ref": "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA"
     },
     "referencetoawscdkeksfargateclustertestFargateClusterDefaultVpcPrivateSubnet2Subnet1F1EC575Ref": {
      "Ref": "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154"
     },
     "referencetoawscdkeksfargateclustertestFargateCluster8588769EClusterSecurityGroupId": {
      "Fn::GetAtt": [
       "FargateCluster019F03E8",
       "ClusterSecurityGroupId"
      ]
     },
     "referencetoawscdkeksfargateclustertestAssetParameters92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4S3BucketCDE77E92Ref": {
      "Ref": "AssetParameters92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4S3BucketC479E94B"
     },
     "referencetoawscdkeksfargateclustertestAssetParameters92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4S3VersionKeyEEEBF2BBRef": {
      "Ref": "AssetParameters92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4S3VersionKeyEF78B2AD"
     },
     "referencetoawscdkeksfargateclustertestAssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3Bucket899EE5ABRef": {
      "Ref": "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3BucketD3288998"
     },
     "referencetoawscdkeksfargateclustertestAssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3VersionKey1296E713Ref": {
      "Ref": "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3VersionKeyB00C0565"
     },
     "referencetoawscdkeksfargateclustertestAssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3BucketA8B33C0FRef": {
      "Ref": "AssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3Bucket40DFAF90"
     },
     "referencetoawscdkeksfargateclustertestAssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3VersionKey10EBAC4DRef": {
      "Ref": "AssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3VersionKey36104212"
     }
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  }
 },
 "Outputs": {
  "FargateClusterConfigCommand46D4A6C7": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "aws eks update-kubeconfig --name ",
      {
       "Ref": "FargateCluster019F03E8"
      },
      " --region ",
      {
       "Ref": "AWS::Region"
      },
      " --role-arn ",
      {
       "Fn::GetAtt": [
        "FargateClusterMastersRole50BAF9FD",
        "Arn"
       ]
      }
     ]
    ]
   }
  },
  "FargateClusterGetTokenCommand4ADED7BB": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "aws eks get-token --cluster-name ",
      {
       "Ref": "FargateCluster019F03E8"
      },
      " --region ",
      {
       "Ref": "AWS::Region"
      },
      " --role-arn ",
      {
       "Fn::GetAtt": [
        "FargateClusterMastersRole50BAF9FD",
        "Arn"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "AssetParameters4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06eeS3Bucket4E7CD097": {
   "Type": "String",
   "Description": "S3 bucket for asset \"4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06ee\""
  },
  "AssetParameters4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06eeS3VersionKey93D16224": {
   "Type": "String",
   "Description": "S3 key for asset version \"4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06ee\""
  },
  "AssetParameters4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06eeArtifactHash515E16AE": {
   "Type": "String",
   "Description": "Artifact hash for asset \"4288ebb3652acdf2d828b7db7ca44a7162a401ace50ebb4026e84b18a02a06ee\""
  },
  "AssetParameters4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6S3Bucket5017D348": {
   "Type": "String",
   "Description": "S3 bucket for asset \"4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6\""
  },
  "AssetParameters4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6S3VersionKeyAC941219": {
   "Type": "String",
   "Description": "S3 key for asset version \"4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6\""
  },
  "AssetParameters4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6ArtifactHash62A6950B": {
   "Type": "String",
   "Description": "Artifact hash for asset \"4b85e8c141d9b886acbf891007402913e39574073ba1f533288a75c9f56082c6\""
  },
  "AssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3Bucket40DFAF90": {
   "Type": "String",
   "Description": "S3 bucket for asset \"8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9\""
  },
  "AssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9S3VersionKey36104212": {
   "Type": "String",
   "Description": "S3 key for asset version \"8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9\""
  },
  "AssetParameters8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9ArtifactHash26B5BCAA": {
   "Type": "String",
   "Description": "Artifact hash for asset \"8dd02cc4ac473ca5b08800e92edaa31a1a7db4005928021d029c5363584f11b9\""
  },
  "AssetParametersa70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8S3Bucket4CD5FFC3": {
   "Type": "String",
   "Description": "S3 bucket for asset \"a70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8\""
  },
  "AssetParametersa70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8S3VersionKeyE06BA291": {
   "Type": "String",
   "Description": "S3 key for asset version \"a70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8\""
  },
  "AssetParametersa70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8ArtifactHashA4AB6609": {
   "Type": "String",
   "Description": "Artifact hash for asset \"a70c48e7047fb793b2378668accb1dc2d92f2d7b1fff80c9c718f4964dc69cb8\""
  },
  "AssetParameters92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4S3BucketC479E94B": {
   "Type": "String",
   "Description": "S3 bucket for asset \"92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4\""
  },
  "AssetParameters92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4S3VersionKeyEF78B2AD": {
   "Type": "String",
   "Description": "S3 key for asset version \"92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4\""
  },
  "AssetParameters92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4ArtifactHash4190C3A3": {
   "Type": "String",
   "Description": "Artifact hash for asset \"92c405c4551a308bcdd55823f8b16268bd3c38fd2a011edaaf3ed72a80f557c4\""
  },
  "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3BucketD3288998": {
   "Type": "String",
   "Description": "S3 bucket for asset \"ea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03e\""
  },
  "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3VersionKeyB00C0565": {
   "Type": "String",
   "Description": "S3 key for asset version \"ea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03e\""
  },
  "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eArtifactHash4654D012": {
   "Type": "String",
   "Description": "Artifact hash for asset \"ea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03e\""
  },
  "AssetParameters9ec5e5302ec9024de736d48514d1938b3044a263556b2786f8ebd3cd7d536362S3Bucket3DF2386F": {
   "Type": "String",
   "Description": "S3 bucket for asset \"9ec5e5302ec9024de736d48514d1938b3044a263556b2786f8ebd3cd7d536362\""
  },
  "AssetParameters9ec5e5302ec9024de736d48514d1938b3044a263556b2786f8ebd3cd7d536362S3VersionKey22CEE8A9": {
   "Type": "String",
   "Description": "S3 key for asset version \"9ec5e5302ec9024de736d48514d1938b3044a263556b2786f8ebd3cd7d536362\""
  },
  "AssetParameters9ec5e5302ec9024de736d48514d1938b3044a263556b2786f8ebd3cd7d536362ArtifactHash483E51F2": {
   "Type": "String",
   "Description": "Artifact hash for asset \"9ec5e5302ec9024de736d48514d1938b3044a263556b2786f8ebd3cd7d536362\""
  },
  "AssetParameters6815ae11ecc2fb2a22ab107f2c127fb4e1f774f854ada7eca8a6c65832947730S3Bucket08E394C2": {
   "Type": "String",
   "Description": "S3 bucket for asset \"6815ae11ecc2fb2a22ab107f2c127fb4e1f774f854ada7eca8a6c65832947730\""
  },
  "AssetParameters6815ae11ecc2fb2a22ab107f2c127fb4e1f774f854ada7eca8a6c65832947730S3VersionKey3DE806EA": {
   "Type": "String",
   "Description": "S3 key for asset version \"6815ae11ecc2fb2a22ab107f2c127fb4e1f774f854ada7eca8a6c65832947730\""
  },
  "AssetParameters6815ae11ecc2fb2a22ab107f2c127fb4e1f774f854ada7eca8a6c65832947730ArtifactHashC96B932E": {
   "Type": "String",
   "Description": "Artifact hash for asset \"6815ae11ecc2fb2a22ab107f2c127fb4e1f774f854ada7eca8a6c65832947730\""
  }
 }
}
